--- a/Project1Prueba/Project1Prueba/ClientApp/package.json
+++ b/Project1Prueba/Project1Prueba/ClientApp/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "html-react-parser": "^4.2.1",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.6",
     "jquery": "^3.6.3",
     "merge": "^2.1.1",
